--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="songItemContainer">
             <div class="songItem">
                 <img src="1.jpeg" alt="10">
-                <span class="songname">295<span> 03:50 <i id="0" class="songplay fa-regular fa-circle-play fa-xl"></i></span></span>
+                <span class="songname">295<span> 03:50 <i id="0" id="pausedddd" class="songplay fa-regular fa-circle-play fa-xl"></i></span></span>
             </div><br>
             <div class="songItem">
                 <img src="2.jpeg" alt="10">
@@ -69,12 +69,13 @@
     <div class="bottom">
         <input type="range" name="proressbar" id="progressbar" value="0">
         <div class="icon">
-            <i class="fa-sharp fa-solid fa-backward-step fa-2xl" id="previous"></i>
-            <i class="fa-regular fa-circle-play fa-2xl "id="masterplay"></i>
-            <i class="fa-sharp fa-solid fa-forward-step fa-2xl" id="next"></i>
+            <!-- fontawesome icons -->
+            <i class="fas fa-3x fa-step-backward" id="previous"></i>
+            <i class="far fa-3x fa-circle-play" id="masterplay"></i>
+            <i class="fas fa-3x fa-step-forward" id="next"></i> 
         </div>
         <div class="imageinfo">
-            <img src="playing.gif" width="44PX" id="gif">bbbbbbb
+            <img src="playing.gif" width="44PX" id="gif">
         </div>
     </div>
 
